@@ -66,7 +66,7 @@
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">84 0 100 1 10 10</property>
+	  <property name="adjustment">256 0 16384 1 10 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
